--- a/control-plane/public/owner.html
+++ b/control-plane/public/owner.html
@@ -757,8 +757,9 @@
       }
 
       function renderBilling(sub) {
-        // Hide billing if admin disabled it or no subscription is set up yet
-        if (!sub || !sub.showBillingPortal || sub.configured === false) {
+        // Hide billing if admin disabled it, no subscription, or plan was removed
+        if (!sub || !sub.showBillingPortal || sub.configured === false
+            || (sub.status === "cancelled" && !sub.planName && !sub.stripePriceId)) {
           $("billing-section").style.display = "none";
           return;
         }
