feat: replace native select dropdowns with custom VeraLux-styled dropdowns
Native <select> hover color is OS-controlled and can't be overridden
with CSS. Added vl-select.js that replaces all native dropdowns with
fully-styled custom dropdowns using VeraLux gold hover and dark theme.

--- a/desktop/renderer/index.html
+++ b/desktop/renderer/index.html
@@ -109,5 +109,6 @@
   <div class="toast hidden" id="toast"></div>
 
   <script src="app.js"></script>
+  <script src="vl-select.js"></script>
 </body>
 </html>
